fix list ui overflowing

--- a/src/renderer/styles/preview.component.scss
+++ b/src/renderer/styles/preview.component.scss
@@ -610,8 +610,17 @@
               display: flex;
               align-items: center;
               padding-left: 1em;
+              padding-top: 0.25em;
+              padding-bottom: 0.25em;
               border-left: solid 1px var(--color-preview-user-background);
               border-right: solid 1px var(--color-preview-user-background);
+              span {
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+                text-overflow: ellipsis;
+              }
               ng-toggle-button {
                 @include ngToggleButtonColor(ng-toggle-button);
                 font-size: 1em;
